# jni-maven-example

./: .gitignore  README.md  pom.xml
src/main/java/org/example/: LibraryLoader.java  Main.java
src/main/native/: CMakeLists.txt  org_example_Main.cpp  org_example_Main.h
